
AM_CFLAGS = -D_LARGE_FILE=1 -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE=1 \
        -DNDEBUG=1 \
	@OMIT_GEOS_FLAGS@ @GEOSADVANCED_FLAGS@ @OMIT_PROJ_FLAGS@ \
	@OMIT_ICONV_FLAGS@ @OMIT_MATHSQL_FLAGS@ \
	@OMIT_EPSG_FLAGS@ @OMIT_GEOCALLBACKS_FLAGS@ @OMIT_FREEXL_FLAGS@

INCLUDES = @CFLAGS@
INCLUDES += -I$(top_srcdir)/src/headers

noinst_LTLIBRARIES = libgaiaaux.la

libgaiaaux_la_SOURCES = gg_sqlaux.c \
	gg_utf8.c

MOSTLYCLEANFILES = *.gcna *.gcno *.gcda
